updated to static final